CODE/logs/.ipynb_checkpoints/LOG_EVAL_PYR_SPOT1_JOB-checkpoint
start


Note: the module "conda" cannot be unloaded because it was not loaded.

load conda/22.11.1  : OK 
envs_dirs : /work/scratch/env/barrouz/conda_env/
pkgs_dirs : /work/scratch/env/barrouz/pkgs_conda
start unet_eval.py
  File "/home/ad/barrouz/code/app/unet_eval.py", line 58
    eval_split["PREDICTION"] = f"{work_dir}/MODELS/{model}/EVAL/{eval_split["tile"]}/{eval_split["year"]}/{eval_split["month"]}/{eval_split["day"]}/PREDICTED_{sat}_{eval_split["tile"]}_{eval_split["year"]}{eval_split["month"]}{eval_split["day"]}_{eval_split["row"]}_{eval_split["col"]}_DRAW_{eval_split["draw"]}.tif"
                                                                             ^
SyntaxError: invalid syntax
[2024-10-08 22:16:42.924277757+00:00] cnes_level2/barrouz/22832619:  Account (env) = cnes_level2
[2024-10-08 22:16:42.925270166+00:00] cnes_level2/barrouz/22832619:     User (env) = barrouz
[2024-10-08 22:16:42.926379645+00:00] cnes_level2/barrouz/22832619:        GroupId = cesbio(426000053)
[2024-10-08 22:16:42.927404644+00:00] cnes_level2/barrouz/22832619:         UserId = barrouz(9134)
[2024-10-08 22:16:42.928406203+00:00] cnes_level2/barrouz/22832619:        Account = cnes_level2
[2024-10-08 22:16:42.929380261+00:00] cnes_level2/barrouz/22832619:        Account = cnes_level2
[2024-10-08 22:16:42.930561341+00:00] cnes_level2/barrouz/22832619:      Partition = gpu_a100
[2024-10-08 22:16:42.931547680+00:00] cnes_level2/barrouz/22832619:            QOS = gpu_all
[2024-10-08 22:16:42.932526678+00:00] cnes_level2/barrouz/22832619:        JobName = EVAL_PYR_SPOT1
[2024-10-08 22:16:42.933530957+00:00] cnes_level2/barrouz/22832619:     SubmitTime = 2024-10-08T22:16:12
[2024-10-08 22:16:42.934625046+00:00] cnes_level2/barrouz/22832619:        RunTime = 00:00:28
[2024-10-08 22:16:42.935679326+00:00] cnes_level2/barrouz/22832619:      TimeLimit = 06:00:00
[2024-10-08 22:16:42.936750495+00:00] cnes_level2/barrouz/22832619:   EligibleTime = 2024-10-08T22:16:12
[2024-10-08 22:16:42.937853514+00:00] cnes_level2/barrouz/22832619:      StartTime = 2024-10-08T22:16:14
[2024-10-08 22:16:42.938910613+00:00] cnes_level2/barrouz/22832619:        EndTime = 2024-10-08T22:16:42
[2024-10-08 22:16:42.939919682+00:00] cnes_level2/barrouz/22832619:       ExitCode = 1:0
[2024-10-08 22:16:42.940948511+00:00] cnes_level2/barrouz/22832619:       NodeList = trexgpu03
[2024-10-08 22:16:42.942059931+00:00] cnes_level2/barrouz/22832619:      BatchHost = trexgpu03
[2024-10-08 22:16:42.943093570+00:00] cnes_level2/barrouz/22832619:           TRES = 
[2024-10-08 22:16:42.944290720+00:00] cnes_level2/barrouz/22832619:        Command = /home/ad/barrouz/code/trex/run_unet_eval_job.sh
[2024-10-08 22:16:42.945384939+00:00] cnes_level2/barrouz/22832619:        WorkDir = /home/ad/barrouz/code
[2024-10-08 22:16:42.946572780+00:00] cnes_level2/barrouz/22832619:         StdErr = /home/ad/barrouz/code/logs/LOG_EVAL_PYR_SPOT1_JOB
[2024-10-08 22:16:42.947824191+00:00] cnes_level2/barrouz/22832619:         StdOut = /home/ad/barrouz/code/logs/LOG_EVAL_PYR_SPOT1_JOB

#########################################
#        EVIDEN - CNES                  #
#        Job Accounting                 #
#########################################
Cluster              : trex
JobIDRaw             : 22832619
JobID                : 22832619
JobName              : EVAL_PYR_SPOT1
Account              : cnes_level2
User                 : barrouz(9134), cesbio(426000053)
Partition            : gpu_a100
QOS                  : gpu_all
Nodelist             : trexgpu03 (1)
State                : FAILED  (Exitcode=1:0, DerivedExitCode=0:0, Restarts=0)
Submit date          : 2024-10-08T22:16:12
Start time           : 2024-10-08T22:16:14
End time             : 2024-10-08T22:16:42
Elapsed time         : 00:00:28  (Timelimit=06:00:00, Suspended=00:00:00)
TEI                  : 0:03:44
Command              : /home/ad/barrouz/code/trex/run_unet_eval_job.sh
StdOut               : /home/ad/barrouz/code/logs/LOG_EVAL_PYR_SPOT1_JOB
StdErr               : /home/ad/barrouz/code/logs/LOG_EVAL_PYR_SPOT1_JOB

STEP(s) : 2
--------- 
   StepID  | JobName      State       Exit   Start               End                 Elapsed   TotalCPU   CPUTime    ConsumedEnergy MaxDiskRead MaxDiskWrite     MaxRSS MaxRSSTask MaxRSSNode NNodes UserCPU    NodeList
   ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- 
   batch   | batch        FAILED      1:0    2024-10-08T22:16:14 2024-10-08T22:16:42 00:00:28  00:01.207  00:03:44              0.0           0        0.00M      1976K          0  trexgpu03      1 00:00.986  trexgpu03
   extern  | extern       COMPLETED   0:0    2024-10-08T22:16:14 2024-10-08T22:16:42 00:00:28  00:00:00   00:03:44              0.0           0            0      1596K          0  trexgpu03      1 00:00:00   trexgpu03

